# frontend/openapi.json
@@ -5433,6 +5433,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -5442,7 +5446,8 @@
           "target_gene_id",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "CrispriStrainResponse"
       },
@@ -5744,6 +5749,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -5753,7 +5762,8 @@
           "classification",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "EssentialityResponse"
       },
@@ -6887,6 +6897,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -6896,7 +6910,8 @@
           "growth_defect",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "HypomorphResponse"
       },
@@ -8200,6 +8215,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -8209,7 +8228,8 @@
           "activity_measured",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "ProteinActivityAssayResponse"
       },
@@ -8643,6 +8663,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -8652,7 +8676,8 @@
           "status",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "ProteinProductionResponse"
       },
@@ -9611,6 +9636,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -9620,7 +9649,8 @@
           "mutation",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "ResistanceMutationResponse"
       },
@@ -9862,6 +9892,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -9870,7 +9904,8 @@
           "workspace_id",
           "species_organism_id",
           "name",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "StrainResponse"
       },
@@ -10243,6 +10278,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -10254,7 +10293,8 @@
           "is_experimental",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "UnpublishedStructureResponse"
       },
@@ -11157,6 +11197,10 @@
           "version": {
             "type": "integer",
             "title": "Version"
+          },
+          "is_shared": {
+            "type": "boolean",
+            "title": "Is Shared"
           }
         },
         "type": "object",
@@ -11165,7 +11209,8 @@
           "gene_id",
           "provenance",
           "extensions",
-          "version"
+          "version",
+          "is_shared"
         ],
         "title": "VulnerabilityResponse"
       },
